--- a/flower.html
+++ b/flower.html
@@ -7,8 +7,9 @@
    <body>
       <h1>Flower</h1>
       <p>Learning Git using a Lab from CPSC 1045 course.</p>
-      <p>Try two.</p>
-      <p>HAhahahahahahhaha</p>
+      <p>Try three.</p>
+      <p>Learning a little bit.\n
+      Good and helpful stuff.</p>
 	  <p>Number of Petals:  <input type="text" id = "petals" value = ""></p>
 	  <p>Number of Points: <input type = "text" id = "points" value = ""></p>
 	  <p><input type = "button" id = "draw" value = "Draw Flower" onclick = "draw()"></p>
